--- a/PMM/choice.yml
+++ b/PMM/choice.yml
@@ -9,27 +9,26 @@
 
 templates:
   Choice:
+    default:
+      url: critics
     cache_builders: 1
     sort_title: +16_<<collection_name>>
     collection_mode: hide
     smart_label: audience_rating.desc
     summary: <<year>> Critics Choice Awards
-    trakt_list: https://trakt.tv/users/pjcob/lists/<<year>>-critics-choice
+    trakt_list: https://trakt.tv/users/pjcob/lists/<<year>>-<<url>>-choice
     url_poster: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/award/choice/<<year>>.jpg
 
 collections:
 
   Critics Choice Awards 2022:
-    template: { name: Choice, year: 2022 }
-    trakt_list: https://trakt.tv/users/pjcob/lists/<<year>>-critic-s-choice
+    template: { name: Choice, year: 2022, url: critic-s }
 
   Critics Choice Awards 2021:
-    template: { name: Choice, year: 2021 }
-    trakt_list: https://trakt.tv/users/pjcob/lists/<<year>>-critic-s-choice
+    template: { name: Choice, year: 2021, url: critic-s }
 
   Critics Choice Awards 2020:
-    template: { name: Choice, year: 2020 }
-    trakt_list: https://trakt.tv/users/pjcob/lists/<<year>>-critic-s-choice
+    template: { name: Choice, year: 2020, url: critic-s }
 
   Critics Choice Awards 2019:
     template: { name: Choice, year: 2019 }
